/*
 * $Id: ChangeLog,v 1.3097 2004/06/20 22:16:00 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-20 22:12 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * contrib/libct/dattime3.prg
    ! Fixed showtime() function to show time newly after be disabled by calling showTime() 
      without parameters. Bug reported by JoteR.

2004-06-19 12:30 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * source/rtl/teditor.prg
    ! Fix at line 748 where ::aTextLength was changed to ::aTextLen.
      Reported by Teo Fonrouge.

2004-06-19 10:40 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * contrib/libct/dattime3.prg
    ! Fixed showtime() function to show time at row/col greather than 24/79.
    * Bug reported by JoteR.

2004-06-20 00:07 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/mysql/mysql.c
    - Fix GPF in HB_FUNC(SQLLISTTBL) & HB_FUNC(SQLLISTDB)
        ( effects TMysqlServer:ListTables() & TMysqlServer:ListDBs() in tmysql.prg )

2004-06-18 19:01 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/tget.prg
    ! Fixed METHOD ParsePict() to correctly process lowercase template characters.

2004-06-18 18:01 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    ! Added '\' to complex macro detection in getExpReal() support for Extended Markers.

2004-06-19 01:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/files.c
    ! Fixed FILESIZE() to return -1 if the file is not found.
    ! Fixed FILEATTR() to return FA_ARCH on non-MS platforms.
  * contrib/libct/range.c
    ! Fixed RANGEREPL() and RANGEREM() to work with empty strings.

2004-06-18 12:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/tbrowse.prg
    * @ 932 changed Len() back to LenVal() Browsing dates was a problem.
  * include/hbver.h