@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3097 2004/06/20 22:16:00 modalsist Exp $
+ * $Id: ChangeLog,v 1.3097 2004/06/21 01:20:01 modalsist Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-06-21 21:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * source/rtl/filesys.prg
+    ! Fixed hb_fsIsDrv() and hb_fsChDrv() on DJGPP.
 
 2004-06-20 22:12 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
   * contrib/libct/dattime3.prg
